--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
     
     <!-- Favicons and Icons -->
     <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/assets/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/assets/icons/icon-16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/assets/icons/icon-32.png" />
-    <link rel="icon" type="image/png" sizes="64x64" href="%PUBLIC_URL%/assets/icons/icon-64.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/assets/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/assets/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="%PUBLIC_URL%/assets/favicon-48x48.png" />
     
     <!-- Apple Touch Icons -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/icons/apple-touch-icon.png" />
